Fixed blocco class on mobile

--- a/assets/mediaquery.css
+++ b/assets/mediaquery.css
@@ -166,10 +166,6 @@
     margin-bottom: 0 !important;
   }
 
-  #projects {
-    margin-bottom: 0 !important;
-  }
-
   #p-name {
     display: none;
   }
@@ -189,6 +185,7 @@
   #about {
     flex-direction: column;
     gap: 50px;
+    margin-top: 80px;
   }
 
   #about img {
@@ -200,7 +197,7 @@
   }
 
   #intro p {
-    font-size: 2.25rem;
+    font-size: 1.8rem;
   }
 }
 
